Enhance security and error handling: update headers for CORS, add content security policies, improve token derivation with salt, create backups before saving settings and manifest, and implement path traversal prevention in admin routes.

--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,10 @@ composer.phar
 # Temporary files
 *.tmp
 *.bak
+
+# Application data (contains sensitive tokens and user data)
+data/instance.json
+data/manifest.json
+data/settings.json
+data/page-types.json
+data/posts/
