feat: initialize web-php project with basic structure and testing setup - Add package.json with dependencies for Vitest and Happy DOM - Create English and German localization files for navigation and messages - Implement test setup file to mock global objects for testing - Add unit tests for common utilities including debounce, authentication guard, logout handler, loading overlay, and login page initialization - Configure Vitest for testing environment and coverage reporting

--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,10 @@ composer.phar
 # Build output
 dist/
 
+# Node.js
+node_modules/
+coverage/
+
 # Application data (contains sensitive tokens and user data)
 data/instance.json
 data/manifest.json
