fix: update author field in package.json and remove Claude AI entry from .gitignore

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "test:coverage": "vitest run --coverage"
   },
   "keywords": [],
-  "author": "",
+  "author": "Christoph Bauer",
   "license": "ISC",
   "devDependencies": {
     "@vitest/coverage-v8": "^4.0.18",
