--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "devDependencies": {
     "@vitest/coverage-v8": "^4.0.18",
     "@vitest/ui": "^4.0.18",
+    "fast-check": "^4.5.3",
     "happy-dom": "^20.6.1",
     "vitest": "^4.0.18"
   }
