--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "test": "vitest run",
     "test:watch": "vitest",
     "test:ui": "vitest --ui",
-    "test:coverage": "vitest run --coverage"
+    "test:coverage": "vitest run --coverage",
+    "update:mock:on": "bash ./test-tools/toggle-update-check.sh on-auto",
+    "update:mock:off": "bash ./test-tools/toggle-update-check.sh off",
+    "update:mock:status": "bash ./test-tools/toggle-update-check.sh status",
+    "update:mock:check": "bash ./test-tools/toggle-update-check.sh check"
   },
   "keywords": [],
   "author": "Christoph Bauer",
